# civ5-civilization-studio

./: .gitignore  AGENTS.md  CODE_OF_CONDUCT.md  CODE_SIGNING_POLICY.md  CONTRIBUTING.md  Civ_Creation_Template.json  Dahomey_art_reference_v2.json  Florence_art_reference_v1.json  Ghaznavids_art_reference_v1.json  Goguryeo_art_reference_v1.json  Goguryeo_art_reference_v2_filled.json  Kush_civ_creation_template.json  LICENSE  Minoan_art_reference_v1.json  Mississippian_art_reference_v1.json  Nabataea_art_reference_v1.json  Nabataea_simple_civ5_dds_manifest.json  Nabataea_simple_manifest_README.md  README.md  README.txt  SECURITY.md  SIMPLE_CIV5_DDS_BUILDER_README.md  Shimazu_civ_creation_template.json  SpartanLeague_art_reference_v9.json  THIRD_PARTY_NOTICES.md  TeutonicOrder_art_reference_v1.json  UDMB_atlas_builder_config_medallion.json  UDMB_atlas_builder_config_prebaked_strip_rebuild.json  UDMB_atlas_builder_config_prescale_existing_medallions.json  UDMB_smallui_config.json  Universal_civ5_pipeline_Template.json  pyproject.toml  simple_civ5_dds_builder.py  simple_civ5_dds_builder_v2.py  udmb_atlas_builder_medallion.py  udmb_atlas_builder_medallion_prebaked_fix.py  udmb_atlas_builder_smallui_v2.py  universal_civ5_pipeline.py
.github/: CODEOWNERS  pull_request_template.md
Old scripts/: CHANGELOG.md  CUSTOM_CIV_template.dds.json  Dahomey.json  Dahomey_UnitFlagProfileFix.json  MISSISSIPPIAN_CUSTOM.dds.json  Minoan.json  Mississippian.auditfix.example.local.json  Mississippian.json  Mississippian_QA_Report_after_fix.md  Nabataea_fixed.json  Nabataea_fixed_v2.json  (+17 more)
(+133 files in other folders)
